<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Main"
    android:background="@color/orange_600"
    android:gravity="center">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:weightSum="1"
        android:id="@+id/linearLayout"
        android:background="@color/orange_400"
        android:gravity="center_vertical"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/linearLayout1"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fun"
            android:id="@+id/textView3"
            android:textStyle="bold|italic"
            android:textSize="50dp"
            android:textColor="@color/orange_50"
            android:padding="30dp"
            android:textAlignment="center"
            android:typeface="serif"
            android:gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:background="@color/orange_200"
        android:id="@+id/linearLayout1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_a_movie"
            android:id="@+id/movieButton"
            android:textColor="@color/orange_50"
            android:background="@color/orange_400"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="0.5"
            android:layout_marginLeft="5dp"
             />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_the_weather"
            android:id="@+id/weatherButton"
            android:textColor="@color/orange_50"
            android:background="@color/orange_400"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="0.5"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp" />

    </LinearLayout>

</RelativeLayout>
